feat: 支付宝沙箱模拟 loadingModal隐藏

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     </div>
 </div>
 
-<div id="loadingModal" class="fixed inset-0 bg-black/50 flex items-center justify-center z-50">
+<div id="loadingModal" class="fixed inset-0 bg-black/50 flex items-center justify-center z-50 hidden">
     <div class="bg-white rounded-xl p-8 max-w-[80%] w-[300px] text-center">
         <div class="w-16 h-16 rounded-full bg-success/20 flex items-center justify-center text-success mx-auto mb-4">
             <i class="fa fa-load text-2xl"></i>
