--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
     <!-- 订单信息摘要 -->
     <div class="bg-white rounded-xl shadow-sm p-6 mb-6">
         <!-- 账户有效期提示 -->
-        <div id="expireNotice" class="mb-6 p-3 bg-gradient-to-r from-warning/10 to-primary/5 border border-warning/20 rounded-lg hidden">
+        <div id="expireNotice"
+             class="mb-6 p-3 bg-gradient-to-r from-warning/10 to-primary/5 border border-warning/20 rounded-lg hidden">
             <div class="flex items-center">
                 <i class="fa fa-clock-o text-warning mr-2"></i>
                 <span id="expireText" class="text-gray-600 text-sm"></span>
@@ -315,15 +316,11 @@
 
         try {
             const sign = getUrlParams('sign') || '';
-            const apiUrl = `https://zd-iot.here.link/herelink-bill/api/lock/profit/web/pay/getAccountInfo?token=${sign}`;
+            const apiUrl = `https://zd-iot.here.link/herelink-bill/api/lock/profit/web/pay/getAccountInfo?token=${encodeURIComponent(sign)}`;
 
             // 发起POST请求
             const response = await fetch(apiUrl, {
                 method: 'POST',
-                // 根据实际需求添加headers（如需要）
-                headers: {
-                    'Content-Type': 'application/json'
-                }
             });
 
             if (response.ok) {
