--- a/index.html
+++ b/index.html
@@ -326,6 +326,10 @@
             if (response.ok) {
                 const result = await response.json();
                 if (result.errorCode === 0 && result.data) {
+                    if (result.data.orderToken) {
+                        this.window.herf = `/done?token=${encodeURIComponent(result.data.orderToken)}`
+                        return;
+                    }
                     // 存储账户信息
                     accountInfo.accountsId = result.data.accountsId || '';
                     // 转换过期时间为时间戳
