--- a/done/index.html
+++ b/done/index.html
@@ -3,15 +3,295 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>确认支付 - 安全支付中心 支付完成</title>
+    <title>支付完成 - 安全支付中心</title>
     <!-- Tailwind CSS 官方最新稳定版 CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome 图标库 -->
-    <link rel="stylesheet" href="static/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <!-- 自定义配置 -->
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        primary: '#165DFF',
+                        success: '#00B42A',
+                        warning: '#FF7D00',
+                        danger: '#F53F3F',
+                        gray: {
+                            100: '#F7F8FA',
+                            200: '#E5E6EB',
+                            300: '#C9CDD4',
+                            400: '#86909C',
+                            500: '#4E5969',
+                            600: '#272E3B',
+                        }
+                    },
+                    fontFamily: {
+                        sans: ['PingFang SC', 'Helvetica Neue', 'Arial', 'sans-serif'],
+                    },
+                },
+            }
+        }
+    </script>
+
+    <style type="text/tailwindcss">
+        @layer utilities {
+            .content-auto {
+                content-visibility: auto;
+            }
+
+            .btn-gradient {
+                @apply bg-gradient-to-r from-primary to-primary/80;
+            }
+
+            /* 统一状态卡片样式 */
+            .status-card {
+                @apply bg-white rounded-xl shadow-sm p-8 mb-6 text-center flex flex-col items-center justify-center;
+            }
+        }
+    </style>
 </head>
-<body>
-<div>
-    支付完成
-</div>
+<body class="bg-gray-100 font-sans text-gray-600 min-h-screen flex flex-col">
+<!-- 顶部导航栏 -->
+<header class="bg-white shadow-sm sticky top-0 z-30">
+    <div class="container mx-auto px-4 py-3 flex items-center justify-between">
+        <a href="#" class="flex items-center text-gray-600">
+            <i class="fa fa-arrow-left text-xl mr-2"></i>
+            <span class="text-lg font-medium">返回</span>
+        </a>
+        <h1 class="text-lg font-semibold text-gray-600">支付完成</h1>
+        <div class="w-8"></div>
+    </div>
+</header>
+
+<!-- 主内容区 -->
+<main class="flex-1 container mx-auto px-4 py-8">
+    <!-- 统一状态卡片 -->
+    <div class="status-card" id="statusCard">
+        <!-- 状态图标 -->
+        <div class="w-20 h-20 rounded-full bg-gray-100 flex items-center justify-center mx-auto mb-6" id="statusIcon">
+            <i class="fa fa-spinner fa-spin text-primary text-4xl"></i>
+        </div>
+
+        <!-- 状态标题 -->
+        <h2 class="text-[clamp(1.5rem,3vw,2rem)] font-bold text-gray-600 mb-2" id="statusTitle">正在查询支付结果</h2>
+
+        <!-- 状态描述 -->
+        <p class="text-gray-400 mb-8" id="statusDesc">请稍候...</p>
+
+        <!-- 支付金额 -->
+        <div class="mb-8 hidden" id="amountSection">
+            <span class="text-gray-400 text-lg">支付金额</span>
+            <div class="text-[clamp(2rem,5vw,3rem)] font-bold text-danger mt-2" id="payAmount"></div>
+        </div>
+
+        <!-- 操作按钮 -->
+        <button id="retryBtn"
+                class="btn-gradient text-white font-medium py-3 px-12 rounded-lg shadow-lg hover:shadow-xl transition-all hidden">
+            重新查询
+        </button>
+    </div>
+
+    <!-- 支付详情卡片（初始隐藏） -->
+    <div class="bg-white rounded-xl shadow-sm p-6 mb-6 hidden" id="detailCard">
+
+        <div class="space-y-4 text-sm">
+            <div class="flex justify-between pb-3 border-b border-gray-100">
+                <span class="text-gray-400">交易单号</span>
+                <span class="text-gray-600 font-medium" id="orderId"></span>
+            </div>
+
+            <div class="flex justify-between pb-3 border-b border-gray-100">
+                <span class="text-gray-400">账户ID</span>
+                <span class="text-gray-600 font-medium" id="accountId"></span>
+            </div>
+
+            <div class="flex justify-between pb-3 border-b border-gray-100">
+                <span class="text-gray-400">支付方式</span>
+                <span class="text-gray-600 flex items-center">
+                    <i class="fa-brands fa-alipay text-blue-500 mr-2"></i>
+                    支付宝支付
+                </span>
+            </div>
+
+            <div class="flex justify-between">
+                <span class="text-gray-400">支付时间</span>
+                <span class="text-gray-600" id="payTime"></span>
+            </div>
+        </div>
+    </div>
+
+    <!-- 账户状态提示（初始隐藏） -->
+    <div class="bg-primary/5 rounded-xl border border-primary/20 p-4 mb-6 hidden" id="tipsCard">
+        <div class="flex items-start">
+            <i class="fa fa-info-circle text-primary mt-1 mr-3"></i>
+            <div class="text-sm text-gray-600">
+                <p class="mb-1">• 充值金额已实时到账，可用于平台各项服务消费</p>
+                <p>• 如有到账延迟或金额不符，请联系客服：400-110-2888</p>
+            </div>
+        </div>
+    </div>
+</main>
+
+<!-- 底部版权信息 -->
+<!--<footer class="bg-white py-4 px-6 border-t border-gray-200">-->
+<!--    <div class="container mx-auto text-center text-xs text-gray-400">-->
+<!--        <p>© 2024 安全支付中心 版权所有 | 支付服务由第三方机构提供</p>-->
+<!--    </div>-->
+<!--</footer>-->
+
+<script>
+    // 全局变量存储支付信息
+    let payInfo = {
+        orderId: '',
+        accountId: '',
+        payAmount: 0,
+        payTime: ''
+    };
+
+    // 获取URL参数工具函数
+    function getUrlParams(paramKey) {
+        const searchParams = window.location.search.slice(1);
+        if (!searchParams) return paramKey ? null : {};
+
+        const params = {};
+        searchParams.split('&').forEach(item => {
+            const [key, value = ''] = item.split('=');
+            params[decodeURIComponent(key)] = decodeURIComponent(value);
+        });
+
+        return paramKey ? params[paramKey] || null : params;
+    }
+
+    // 格式化金额显示
+    const formatAmount = (amount) => {
+        return `¥${Number(amount).toLocaleString('zh-CN', {
+            minimumFractionDigits: 2,
+            maximumFractionDigits: 2
+        })}`;
+    };
+
+    // 更新状态卡片内容
+    const updateStatusCard = (type, data = {}) => {
+        const iconEl = document.getElementById('statusIcon');
+        const titleEl = document.getElementById('statusTitle');
+        const descEl = document.getElementById('statusDesc');
+        const amountSection = document.getElementById('amountSection');
+        const retryBtn = document.getElementById('retryBtn');
+
+        // 重置所有状态
+        iconEl.className = 'w-20 h-20 rounded-full mx-auto mb-6 flex items-center justify-center';
+        retryBtn.classList.add('hidden');
+        amountSection.classList.add('hidden');
+
+        switch (type) {
+            case 'loading':
+                // 加载状态
+                iconEl.classList.add('bg-gray-100');
+                iconEl.innerHTML = '<i class="fa fa-spinner fa-spin text-primary text-4xl"></i>';
+                titleEl.textContent = '正在查询支付结果';
+                descEl.textContent = '请稍候...';
+                descEl.className = 'text-gray-400 mb-8';
+                break;
+
+            case 'success':
+                // 成功状态
+                iconEl.classList.add('bg-success/20', 'text-success');
+                iconEl.innerHTML = '<i class="fa fa-check-circle text-4xl"></i>';
+                titleEl.textContent = '支付成功';
+                descEl.textContent = '您的充值金额已实时到账，可在账户中心查看';
+                descEl.className = 'text-gray-400 mb-8';
+                amountSection.classList.remove('hidden');
+                document.getElementById('payAmount').textContent = formatAmount(data.payAmount || 0);
+                // 显示其他内容卡片
+                document.getElementById('detailCard').classList.remove('hidden');
+                document.getElementById('tipsCard').classList.remove('hidden');
+                break;
+
+            case 'error':
+                // 错误状态
+                iconEl.classList.add('bg-danger/10', 'text-danger');
+                iconEl.innerHTML = '<i class="fa fa-exclamation-circle text-4xl"></i>';
+                titleEl.textContent = '查询失败';
+                descEl.textContent = data.message || '网络异常，无法连接到服务器';
+                descEl.className = 'text-danger mb-8';
+                retryBtn.classList.remove('hidden');
+                break;
+        }
+    };
+
+    // 初始化页面数据
+    const initPageData = () => {
+        // 更新详情卡片数据
+        document.getElementById('orderId').textContent = payInfo.orderId;
+        document.getElementById('accountId').textContent = payInfo.accountId || '-';
+        document.getElementById('payTime').textContent = payInfo.payTime;
+
+        // 更新成功状态
+        updateStatusCard('success', {payAmount: payInfo.payAmount});
+    };
+
+    // 调用获取支付结果的接口
+    const fetchPayResult = async () => {
+        // 设置为加载状态
+        updateStatusCard('loading');
+        try {
+            // 获取URL中的token参数
+            const token = getUrlParams('token') || '';
+            if (!token) {
+                updateStatusCard('error', {message: '缺少必要的验证参数，请返回支付页面重新操作'});
+                return;
+            }
+
+            const apiUrl = `https://zd-iot.here.link/herelink-bill/api/lock/profit/web/pay/getOrderInfo?token=${token}`;
+
+            // 发起POST请求
+            const response = await fetch(apiUrl, {
+                method: 'POST'
+            });
+
+            if (response.ok) {
+                const result = await response.json();
+                if (result.errorCode === 0 && result.data) {
+                    if (result.data.status !== 2) {
+                        updateStatusCard('error', {message: '当前订单未完成'});
+                    } else {
+                        // 存储支付信息
+                        payInfo = {
+                            orderId: result.data.id || '',
+                            accountId: result.data.accountsId || '',
+                            payAmount: result.data.amount || 0,
+                            payTime: result.data.gmtUpdate
+                        };
+                        // 初始化页面数据
+                        initPageData();
+                    }
+                } else {
+                    // 接口返回错误
+                    updateStatusCard('error', {message: result.message || '获取支付结果失败：未知错误'});
+                }
+            } else {
+                // 接口请求失败
+                updateStatusCard('error', {message: `接口请求失败：${response.status} ${response.statusText}`});
+            }
+        } catch (error) {
+            // 网络异常
+            console.error('获取支付结果出错:', error);
+            updateStatusCard('error', {message: '网络异常，无法连接到服务器，请检查网络后重试'});
+        }
+    };
+
+    // 重新查询按钮事件
+    document.getElementById('retryBtn').addEventListener('click', () => {
+        fetchPayResult();
+    });
+
+    // 页面加载完成后初始化
+    window.addEventListener('DOMContentLoaded', () => {
+        fetchPayResult();
+    });
+</script>
 </body>
 </html>
