--- a/done/index.html
+++ b/done/index.html
@@ -58,7 +58,7 @@
 <header class="bg-white shadow-sm sticky top-0 z-30">
     <div class="container mx-auto px-4 py-3 flex items-center justify-between">
         <a href="#" class="flex items-center text-gray-600">
-            <i class="fa fa-arrow-left text-xl mr-2"></i>
+<!--            <i class="fa fa-arrow-left text-xl mr-2"></i>-->
 <!--            <span class="text-lg font-medium">返回</span>-->
         </a>
         <h1 class="text-lg font-semibold text-gray-600">支付完成</h1>
