--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>确认支付 - 安全支付中心</title>
     <!-- Tailwind CSS 官方最新稳定版 CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="static/js/tailwindcss.3.4.17.min.js"></script>
     <!-- Font Awesome 图标库 -->
     <link rel="stylesheet" href="static/css/all.min.css">
 
