--- a/src/done/index.html
+++ b/src/done/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>支付完成 - 安全支付中心</title>
-    <!-- Tailwind CSS 官方最新稳定版 CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome 图标库 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="../static/tailwindcss/styles.min.css">
 
     <!-- 自定义配置 -->
     <script>
@@ -35,28 +34,11 @@
             }
         }
     </script>
-
-    <style type="text/tailwindcss">
-        @layer utilities {
-            .content-auto {
-                content-visibility: auto;
-            }
-
-            .btn-gradient {
-                @apply bg-gradient-to-r from-primary to-primary/80;
-            }
-
-            /* 统一状态卡片样式 */
-            .status-card {
-                @apply bg-white rounded-xl shadow-sm p-8 mb-6 text-center flex flex-col items-center justify-center;
-            }
-        }
-    </style>
 </head>
 <body class="bg-gray-100 font-sans text-gray-600 min-h-screen flex flex-col">
 <!-- 顶部导航栏 -->
 <header class="bg-white shadow-sm sticky top-0 z-30">
-    <div class="container mx-auto px-4 py-3 flex items-center align-center justify-center">
+    <div class="container mx-auto px-4 py-3 flex items-center justify-center">
         <h1 class="text-lg font-semibold text-gray-600">支付完成</h1>
     </div>
 </header>
@@ -64,7 +46,7 @@
 <!-- 主内容区 -->
 <main class="flex-1 container mx-auto px-4 py-8">
     <!-- 统一状态卡片 -->
-    <div class="status-card" id="statusCard">
+    <div class="bg-white rounded-xl shadow-sm p-8 mb-6 text-center flex flex-col items-center justify-center" id="statusCard">
         <!-- 状态图标 -->
         <div class="w-20 h-20 rounded-full bg-gray-100 flex items-center justify-center mx-auto mb-6" id="statusIcon">
             <i class="fa fa-spinner fa-spin text-primary text-4xl"></i>
@@ -84,7 +66,7 @@
 
         <!-- 操作按钮 -->
         <button id="retryBtn"
-                class="btn-gradient text-white font-medium py-3 px-12 rounded-lg shadow-lg hover:shadow-xl transition-all hidden">
+                class="bg-gradient-to-r from-primary to-primary/80 text-white font-medium py-3 px-12 rounded-lg shadow-lg hover:shadow-xl transition-all hidden">
             重新查询
         </button>
     </div>
